fixed #landing-video- sizing (was stretched)

--- a/home/css/refresh.css
+++ b/home/css/refresh.css
@@ -581,7 +581,7 @@ display: none;}
 display: block;}
 
 #landing-video{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_placeholder.jpg) no-repeat;
 }
 
@@ -590,7 +590,7 @@ display: block;}
 }
 
 #landing-video-nx{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_jpl.jpg) no-repeat;
 }
 
@@ -599,7 +599,7 @@ display: block;}
 }
 
 #landing-video-nx-cad{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_steinhobel.jpg) no-repeat;
 }
 
@@ -608,7 +608,7 @@ display: block;}
 }
 
 #landing-video-nx-cam{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_minco.jpg) no-repeat;
 }
 
@@ -617,7 +617,7 @@ display: block;}
 }
 
 #landing-video-nx-cae{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_graham.jpg) no-repeat;
 }
 
@@ -626,7 +626,7 @@ display: block;}
 }
 
 #landing-video-femap{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_placeholder.jpg) no-repeat;
 }
 
@@ -635,7 +635,7 @@ display: block;}
 }
 
 #landing-video-teamcenter{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_placeholder.jpg) no-repeat;
 }
 
@@ -644,7 +644,7 @@ display: block;}
 }
 
 #landing-video-fibersim{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_aerostructures.jpg) no-repeat;
 }
 
@@ -653,7 +653,7 @@ display: block;}
 }
 
 #landing-video-bct{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_placeholder.jpg) no-repeat;
 }
 
@@ -662,7 +662,7 @@ display: block;}
 }
 
 #landing-video-cnc{
-	height: 220px;
+	height: 194px;
 	background: url(../images/promo_placeholder.jpg) no-repeat;
 }
 
